# gvcfgenotyper

./: .gitignore  BCFHelpers.cpp  BCFHelpers.hpp  CHANGELOG.md  CMakeLists.txt  Fasta.cpp  GVCFReader.cpp  GVCFReader.hpp  Makefile  README.md  RefVar.cpp  RefVar.hpp  bcftools.h  gvcfmerge.cpp  hts_utils.h
bcftools_plugins/: diplofy.c
data/: NA12877.tiny.vcf.gz.expected  NA12890.tiny.vcf.gz.tbi  chr20.100kb.fa  mnp.genome.vcf  tiny.ref.fa.fai
data/smoke_test_output/: region_test1.expected  region_test2.expected
data/test2/: NA12877_S1.vcf.gz.tbi  NA12878_S1.vcf.gz.tbi  NA12879_S1.vcf.gz.tbi  NA12880_S1.vcf.gz.tbi  NA12881_S1.vcf.gz.tbi  NA12882_S1.vcf.gz.tbi  NA12883_S1.vcf.gz.tbi  NA12884_S1.vcf.gz.tbi  NA12885_S1.vcf.gz.tbi  NA12886_S1.vcf.gz.tbi  NA12887_S1.vcf.gz.tbi  NA12888_S1.vcf.gz.tbi  NA12889_S1.vcf.gz.tbi  NA12890_S1.vcf.gz.tbi  NA12891_S1.vcf.gz.tbi  NA12892_S1.vcf.gz.tbi  NA12893_S1.vcf.gz.tbi
data/test3/: NA12878_S1.vcf.gz.tbi  test3.ref.fa
docs/: FAQ.md  agg_comparison.md  example_output.vcf  homref_genotype_likelihoods.tex  merge.parallel.sh  merging.md  postprocessing.md  tests.md  todo
docs/hail/: README.md  ilmn2hail.agg.c  ilmn2hail.c  import_vcf_hail_0.2.ipynb
hail/: ilmn2hail.c
htslib-1.5/: config.h  config.mk  config.status
include/: DepthBlock.hh  DepthBuffer.hh  Error.hpp  Fasta.hpp  GVCFMerger.hh  GVCFMerger.hpp  GVCFReader.hh  GVCFReader.hpp  Genotype.hh  Normaliser.hh  StringUtil.hpp  VariantBuffer.hh  common.hpp  ggutils.hh  hts_utils.hpp  multiAllele.hh  needle.hpp  rbuf.h  regidx.h  test_helpers.h  test_helpers.hh  test_utils.h  utils.hh  utils.hpp  vcfnorm.h  vcmp.h
src/: GVCFReader.cpp  gvcfgenotyper.cpp  gvcfmerge.cpp  test_gvcfgenotyper.cpp  test_gvcfmerge.cpp  vcfnorm.c
src/bash/: run_cpp_check.bash  run_regression_tests.sh  run_smoke_tests.sh  test_ft.sh  test_median.sh
src/c/: README.md  bcftools.h  regidx.c  vcfnorm.c  vcfnorm.h  version.c  version.h
src/cpp/: DepthBuffer.hh  GVCFReader.hh  gvcfgenotyper.cpp
src/cpp/lib/: DepthBlock.cpp  DepthBlock.hh  DepthBuffer.cpp  DepthBuffer.hh  GVCFMerger.cpp  GVCFMerger.hh  GVCFReader.cpp  GVCFReader.hh  Genotype.cpp  Genotype.hh  Normaliser.cpp  Normaliser.hh  VariantBuffer.cpp  VariantBuffer.hh  ggutils.cpp  ggutils.hh  multiAllele.cpp  multiAllele.hh
src/cpp/test/: common.hh  test.make  test_DepthBlock.cpp  test_GVCFMerger.cpp  test_GVCFReader.cpp  test_Genotype.cpp  test_Normaliser.cpp  test_VariantBuffer.cpp  test_gvcfgenotyper.cpp  test_helpers.cpp  test_helpers.hh  test_utils.cpp
src/lib/: DepthBlock.cpp  DepthBuffer.cpp  GVCFMerger.cpp  GVCFReader.cpp  Genotype.cpp  Normaliser.cpp  VariantBuffer.cpp  ggutils.cpp  multiAllele.cpp  needle.cpp  regidx.c  utils.cpp  vcfmerge.c  vcfnorm.c  vcmp.c  version.c  vt_utils.cpp
src/test/: test_DepthBlock.cpp  test_GVCFMerger.cpp  test_GVCFReader.cpp  test_Normaliser.cpp  test_VariantBuffer.cpp  test_helpers.cpp  test_utils.cpp
test/: NA12890.tiny.vcf.gz.csi  chr20.100kb.fa.fai
test/data/: NA12877.tiny.vcf.gz.tbi  NA12889.tiny.vcf.gz.tbi  tiny.ref.fa
test/data/test2/: NA12885_S1.vcf.gz.tbi  NA12891_S1.vcf.gz.tbi  NA12892_S1.vcf.gz.tbi
test/data/test3/: NA12877_S1.vcf.gz.tbi
test/regression/: GG-19.vcf.gz.tbi  GG-26.fa  GG-26.fa.fai  GG-26.vcf.gz.expected  GG-26.vcf.gz.tbi  GG-30.fa  GG-30.fa.fai  GG-30.vcf.gz.expected  GG-30.vcf.gz.tbi
test/smoke_test_output/: ps_test1.expected
test/test2/: NA12878_S1.vcf.gz.tbi  NA12883_S1.vcf.gz.tbi  NA12884_S1.vcf.gz.tbi  NA12887_S1.vcf.gz.tbi  NA12888_S1.vcf.gz.tbi  NA12889_S1.vcf.gz.tbi  NA12890_S1.vcf.gz.tbi  NA12893_S1.vcf.gz.tbi  median.expected.txt  test2.ref.fa.fai
